--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -130,8 +130,8 @@
                             <path fill-rule="evenodd" clip-rule="evenodd" d="M17 4H3C2.86739 4 2.74021 4.05268 2.64645 4.14645C2.55268 4.24021 2.5 4.36739 2.5 4.5V15.5C2.5 15.6326 2.55268 15.7598 2.64645 15.8536C2.74021 15.9473 2.86739 16 3 16H17C17.1326 16 17.2598 15.9473 17.3536 15.8536C17.4473 15.7598 17.5 15.6326 17.5 15.5V4.5C17.5 4.36739 17.4473 4.24021 17.3536 4.14645C17.2598 4.05268 17.1326 4 17 4ZM3.5 15V5H16.5V15H3.5Z" fill="white"/>
                             <path fill-rule="evenodd" clip-rule="evenodd" d="M17.3239 4.88L10.2789 10.88C10.1882 10.9573 10.0729 10.9997 9.95371 10.9995C9.83454 10.9994 9.71934 10.9566 9.6289 10.879L2.6729 4.879C2.59546 4.81237 2.5403 4.72362 2.51482 4.62469C2.48935 4.52577 2.49478 4.42141 2.5304 4.32567C2.56602 4.22992 2.63011 4.14739 2.71405 4.08916C2.79798 4.03094 2.89774 3.99982 2.9999 4H16.9999C17.102 4.0002 17.2016 4.03166 17.2854 4.09017C17.3691 4.14867 17.4329 4.23141 17.4681 4.32725C17.5034 4.42309 17.5085 4.52743 17.4827 4.62625C17.4569 4.72507 17.4015 4.81362 17.3239 4.88ZM15.6419 5H4.3449L9.9569 9.841L15.6419 5Z" fill="white"/>
                         </svg>
-                        <input type="text" placeholder="Введите e-mail" name="e-mail" class="footer_input_e-mail">
-                        <a href="#" class="footer_main_text">Ok</a>
+                        <input type="text" placeholder="Введите email" name="email" class="footer_input_e-mail input_e-mail">
+                        <div class="footer_main_text subscribe_ok">Ok</div>
                     </form>
                     <div class="small_text_light">
                         подписываясь на новости, вы соглашаетесь с
@@ -188,8 +188,8 @@
                     <path fill-rule="evenodd" clip-rule="evenodd" d="M17 4H3C2.86739 4 2.74021 4.05268 2.64645 4.14645C2.55268 4.24021 2.5 4.36739 2.5 4.5V15.5C2.5 15.6326 2.55268 15.7598 2.64645 15.8536C2.74021 15.9473 2.86739 16 3 16H17C17.1326 16 17.2598 15.9473 17.3536 15.8536C17.4473 15.7598 17.5 15.6326 17.5 15.5V4.5C17.5 4.36739 17.4473 4.24021 17.3536 4.14645C17.2598 4.05268 17.1326 4 17 4ZM3.5 15V5H16.5V15H3.5Z" fill="white"/>
                     <path fill-rule="evenodd" clip-rule="evenodd" d="M17.3239 4.88L10.2789 10.88C10.1882 10.9573 10.0729 10.9997 9.95371 10.9995C9.83454 10.9994 9.71934 10.9566 9.6289 10.879L2.6729 4.879C2.59546 4.81237 2.5403 4.72362 2.51482 4.62469C2.48935 4.52577 2.49478 4.42141 2.5304 4.32567C2.56602 4.22992 2.63011 4.14739 2.71405 4.08916C2.79798 4.03094 2.89774 3.99982 2.9999 4H16.9999C17.102 4.0002 17.2016 4.03166 17.2854 4.09017C17.3691 4.14867 17.4329 4.23141 17.4681 4.32725C17.5034 4.42309 17.5085 4.52743 17.4827 4.62625C17.4569 4.72507 17.4015 4.81362 17.3239 4.88ZM15.6419 5H4.3449L9.9569 9.841L15.6419 5Z" fill="white"/>
                 </svg>
-                <input type="text" placeholder="Введите e-mail" name="e-mail" class="footer_input_e-mail">
-                <a href="#" class="footer_main_text">Ok</a>
+                <input type="text" placeholder="Введите email" name="email" class="footer_input_e-mail input_e-mail">
+                <div class="footer_main_text subscribe_ok">Ok</div>
             </form>
             <div class="small_text_light">
                 подписываясь на новости, вы соглашаетесь с
