--- a/templates/partials/subscribe_modal.html
+++ b/templates/partials/subscribe_modal.html
@@ -17,8 +17,8 @@
                     <path fill-rule="evenodd" clip-rule="evenodd" d="M17 4H3C2.86739 4 2.74021 4.05268 2.64645 4.14645C2.55268 4.24021 2.5 4.36739 2.5 4.5V15.5C2.5 15.6326 2.55268 15.7598 2.64645 15.8536C2.74021 15.9473 2.86739 16 3 16H17C17.1326 16 17.2598 15.9473 17.3536 15.8536C17.4473 15.7598 17.5 15.6326 17.5 15.5V4.5C17.5 4.36739 17.4473 4.24021 17.3536 4.14645C17.2598 4.05268 17.1326 4 17 4ZM3.5 15V5H16.5V15H3.5Z" fill="#393939"/>
                     <path fill-rule="evenodd" clip-rule="evenodd" d="M17.324 4.88L10.279 10.88C10.1883 10.9573 10.073 10.9997 9.95383 10.9995C9.83466 10.9994 9.71947 10.9566 9.62902 10.879L2.67302 4.879C2.59559 4.81237 2.54042 4.72362 2.51494 4.62469C2.48947 4.52577 2.4949 4.42141 2.53052 4.32567C2.56614 4.22992 2.63023 4.14739 2.71417 4.08916C2.79811 4.03094 2.89786 3.99982 3.00002 4H17C17.1021 4.0002 17.2018 4.03166 17.2855 4.09017C17.3692 4.14867 17.433 4.23141 17.4683 4.32725C17.5036 4.42309 17.5086 4.52743 17.4829 4.62625C17.4571 4.72507 17.4016 4.81362 17.324 4.88ZM15.642 5H4.34502L9.95702 9.841L15.642 5Z" fill="#393939"/>
                 </svg>
-                <input type="text" placeholder="Введите e-mail" name="e-mail" class="input_e-mail">
-                <a href="#" class="main_text">Ok</a>
+                <input type="text" placeholder="Введите email" name="email" class="input_e-mail">
+                <div class="main_text subscribe_ok">Ok</div>
             </form>
             <div class="small_text">
                 подписываясь на новости, вы соглашаетесь с
