--- a/templates/pages/making_order_data.html
+++ b/templates/pages/making_order_data.html
@@ -92,7 +92,7 @@
 
         <!-- Окно проверки номера начало -->
 
-        <div class="dark_window_check_phone inactive">
+        <div class="dark_window dark_window_check_phone inactive">
             <div class="pop-up_form_794 pop_up_check_phone">
                 <div>
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none" class="close_icon">
