--- a/templates/pages/personal_account_info.html
+++ b/templates/pages/personal_account_info.html
@@ -19,7 +19,7 @@
 
 <!-- Окно система скидок начало -->
 
-<div class="dark_window_discount inactive">
+<div class="dark_window dark_window_discount inactive">
     <div class="pop-up_form_794 pop_up_discount">
         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none" class="close_icon">
             <path d="M5.33316 15.2565L4.74316 14.6665L9.40983 9.99983L4.74316 5.33316L5.33316 4.74316L9.99983 9.40983L14.6665 4.74316L15.2565 5.33316L10.5898 9.99983L15.2565 14.6665L14.6665 15.2565L9.99983 10.5898L5.33316 15.2565Z" fill="#393939"/>
@@ -121,7 +121,7 @@
                 Общая сумма покупок
             </div>
             <div class="value_amount main_text_contrast">
-                119 400 р.
+                <span class="total_orders_sum"></span> &nbsp;р.
             </div>
         </div>
 
