--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -49,6 +49,7 @@
         <p class="main_text_contrast uppercase pop-up_title">введите название города</p>
         <form method="GET" action="#" class="choose_city">
             <input type="text" placeholder="Название города" class="input_city" />
+            <div class="city_list"></div>
             <div class="main_text choose_city_btn">Ok</div>
         </form>
     </div>
