--- a/css/style.css
+++ b/css/style.css
@@ -1934,7 +1934,6 @@ html {
   position: relative;
   padding: 60px 35px;
   padding-bottom: 85px;
-  overflow: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -1996,7 +1995,7 @@ html {
 }
 
 .min_height {
-  min-height: calc(100vh - 656px);
+  min-height: calc(100vh - 650px);
 }
 @media screen and (max-width: 920px) {
   .min_height {
@@ -3979,4 +3978,23 @@ html {
 
 .pointer {
   cursor: pointer;
+}
+
+.city_list {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  left: 0;
+  top: 152px;
+  width: 100%;
+  padding-bottom: 10px;
+}
+
+.city_list__item {
+  width: 100%;
+  height: 28px;
+  display: flex;
+  align-items: center;
+  background-color: #FFF;
+  padding-left: 35px;
 }
