--- a/scss/assets/_main.scss
+++ b/scss/assets/_main.scss
@@ -1422,7 +1422,7 @@ html {
     position: relative;
     padding: 60px 35px;
     padding-bottom: 85px;
-    overflow: auto;
+    // overflow: auto;
     
     display: flex;
     flex-direction: column;
@@ -1483,7 +1483,7 @@ html {
 }
 
 .min_height {
-    min-height: calc(100vh - 656px);
+    min-height: calc(100vh - 650px);
     
     @media screen and (max-width: 920px) {
         min-height: calc(100vh - 348px);
@@ -3578,4 +3578,23 @@ html {
 
 .pointer {
     cursor: pointer;
+}
+
+.city_list {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    left: 0;
+    top: 152px;
+    width: 100%;
+    padding-bottom: 10px;
+}
+
+.city_list__item {
+    width: 100%;
+    height: 28px;
+    display: flex;
+    align-items: center;
+    background-color: $main_color_light;
+    padding-left: 35px;
 }
