--- a/templates/pages/product_page.html
+++ b/templates/pages/product_page.html
@@ -28,26 +28,24 @@
 <!-- Страница товара начало -->
 
 <div class="container product_page">
-    <div class="roduct_page__foto">
+    <div class="product_page__foto">
         <img src="./img/product_cards/women/clothes/product3.jpeg" class="product_foto main_foto" alt="#">
         <img src="./img/product_cards/women/clothes/product3/product3-1.jpeg" class="product_foto" alt="#">
         <img src="./img/product_cards/women/clothes/product3/product3-2.jpeg" class="product_foto" alt="#">
         <img src="./img/product_cards/women/clothes/product3/product3-3.jpeg" class="product_foto" alt="#">
 
         <!-- Стрелки скролла начало -->
-
-        <a href="#" class="scroll_arrow arrow_left">
+        <div class="scroll_arrow arrow_left left">
             <svg xmlns="http://www.w3.org/2000/svg" width="8" height="14" viewBox="0 0 8 14" fill="none">
                 <path d="M7 0.5L0.750001 6.75L7 13" stroke="#393939" stroke-width="0.833333" stroke-linecap="round" stroke-linejoin="round"/>
             </svg>
-        </a>
+        </div>
 
-        <a href="#" class="scroll_arrow arrow_right">
+        <div class="scroll_arrow arrow_right right">
             <svg xmlns="http://www.w3.org/2000/svg" width="8" height="14" viewBox="0 0 8 14" fill="none">
                 <path d="M1 13.5L7.25 7.25L1 1" stroke="#393939" stroke-width="0.833333" stroke-linecap="round" stroke-linejoin="round"/>
             </svg>
-        </a>
-
+        </div>
         <!-- Стрелки скролла конец -->
     </div>
 
