--- a/css/style.css
+++ b/css/style.css
@@ -1059,30 +1059,31 @@ html {
 .our_hits .hits_arrow_left {
   position: absolute;
   left: 20px;
-  top: calc(50% - 50px);
+  top: calc(50% - 20px);
 }
 .our_hits .hits_arrow_right {
   position: absolute;
-  left: calc(100% - 50px);
-  top: calc(50% - 50px);
+  left: calc(100% - 60px);
+  top: calc(50% - 20px);
 }
-.our_hits .our_hits__scroll {
+.our_hits .gorizontal_scroll_block {
   width: 100%;
   padding-top: 85px;
   padding-bottom: 50px;
   display: flex;
   justify-content: space-between;
   column-gap: 15px;
-  overflow-x: auto;
+  overflow-x: hidden;
+  scroll-snap-type: x mandatory;
 }
 @media screen and (max-width: 920px) {
-  .our_hits .our_hits__scroll {
+  .our_hits .gorizontal_scroll_block {
     padding-top: 70px;
     padding-bottom: 20px;
   }
 }
 @media screen and (max-width: 920px) {
-  .our_hits .our_hits__scroll {
+  .our_hits .gorizontal_scroll_block {
     padding-top: 35px;
     padding-bottom: 35px;
   }
@@ -1208,8 +1209,8 @@ html {
 }
 
 .scroll_arrow {
-  width: 30px;
-  height: 30px;
+  width: 40px;
+  height: 40px;
   flex-shrink: 0;
   border-radius: 50%;
   background: #FFF;
@@ -1218,11 +1219,7 @@ html {
   display: flex;
   justify-content: center;
   align-items: center;
-}
-@media screen and (max-width: 920px) {
-  .scroll_arrow {
-    display: none;
-  }
+  cursor: pointer;
 }
 
 .subscribe {
@@ -3659,6 +3656,7 @@ html {
   display: flex;
   justify-content: space-between;
   column-gap: 20px;
+  position: relative;
 }
 @media screen and (max-width: 920px) {
   .product_page {
@@ -3667,51 +3665,53 @@ html {
     padding-bottom: 20px;
   }
 }
-.product_page .roduct_page__foto {
+.product_page .product_page__foto {
   width: calc((100% - 20px) / 2);
-  overflow-x: hidden;
-  display: flex;
-  position: relative;
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
   flex-shrink: 0;
-  overflow-x: scroll;
+  overflow-x: hidden;
+  scroll-snap-type: x mandatory;
 }
 @media screen and (max-width: 920px) {
-  .product_page .roduct_page__foto {
+  .product_page .product_page__foto {
     width: 100%;
   }
 }
-.product_page .roduct_page__foto .product_foto {
+.product_page .product_page__foto .product_foto {
   width: 100%;
   aspect-ratio: 590/755;
   object-fit: contain;
 }
-.product_page .roduct_page__foto .arrow_left {
+.product_page .product_page__foto .arrow_left {
   position: absolute;
   left: 20px;
-  top: calc(50% - 15px);
+  top: calc(50% - 20px);
 }
-.product_page .roduct_page__foto .arrow_right {
+.product_page .product_page__foto .arrow_right {
   position: absolute;
-  left: calc(100% - 50px);
-  top: calc(50% - 15px);
+  left: calc(50% - 70px);
+  top: calc(50% - 20px);
 }
-@media screen and (max-width: 1220px) {
-  .product_page .roduct_page__foto .arrow_left {
-    top: calc(50% - 100px);
+@media screen and (max-width: 920px) {
+  .product_page .product_page__foto .arrow_left {
+    left: 20px;
+    top: 25%;
   }
-  .product_page .roduct_page__foto .arrow_right {
-    top: calc(50% - 100px);
+  .product_page .product_page__foto .arrow_right {
+    left: calc(100% - 60px);
+    top: 25%;
   }
 }
-@media screen and (max-width: 1024px) {
-  .product_page .roduct_page__foto .arrow_left {
-    top: calc(50% - 110px);
+@media screen and (max-width: 560px) {
+  .product_page .product_page__foto .arrow_left {
+    left: 20px;
+    top: 20%;
   }
-  .product_page .roduct_page__foto .arrow_right {
-    top: calc(50% - 110px);
+  .product_page .product_page__foto .arrow_right {
+    left: calc(100% - 60px);
+    top: 20%;
   }
 }
 .product_page .roduct_page__info {
